change package version

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
     <!-- build:js(.tmp/serve) scripts/vendor.js -->
     <script src="app/bundle.js" charset="utf8"></script>
     <!-- endbuild -->
+
+    <!-- require dependencies from CDN -->
+    <script src="app/bundle.js" charset="utf8"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.13.0/moment.min.js"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.13.0/locale/zh-cn.js"></script>
     <script type="text/javascript" src="https://img.hcharts.cn/highcharts/highcharts.js"></script>
@@ -40,7 +43,6 @@
     <script src="https://cdn.bootcss.com/viewerjs/1.0.0-rc.1/viewer.min.js"></script>
     <!--<script src="http://192.168.3.72:8080/Downloads/tiff.min.js"></script>-->
     <script src="http://vjs.zencdn.net/4.6.1/video.js"></script>
-
     <!-- <script type="text/javascript" src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script> -->
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
